--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+/* Estilos globales de la aplicación */
+html, body { 
+  height: 100%; 
+  margin: 0; 
+}
+
+/*body { 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+}*/
